--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ciccio-tecchio.io",
+  "name": "cicciotecchio.dev",
   "version": "1.0.0",
-  "private": true,
-  "homepage": "https://cicciotecchio.github.io/CiccioTecchio.io/",
+  "private": false,
+  "homepage": "https://cicciotecchio.dev/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -25,7 +25,6 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.12",
-    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
